add CityFragment adapter

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,7 @@
 <resources>
     <string name="app_name">WeatherAPI</string>
     <string name="enter_city">Enter city</string>
-    <string name="search_btn">Search</string>
-    <string name="minText">Min:</string>
-    <string name="maxText">Max:</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="search">Search</string>
+    <string name="minWeather">Min: %1$.0f</string>
+    <string name="maxWeather">Max: %1$.0f</string>
 </resources>
